--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,9 @@ jobs:                           # top-level job section
       - uses: actions/checkout@v4   # "uses" implies an external action being called upon. "actions/checkout@v4" is a repo that contains code, whose role is to make your source code is available to the workflow (only fetches one commit)
       - name: greeting              # In this case, "name" is the step and refers to the run entry. that's why the run entry is indented within it.
         run: echo "Hey, you! Yes you. Welcome to my world!"  # "run" implies we're running a shell/terminal script
+  job-two:                          # Jobs in actions run in parallel by default, unless implicitly declared
+    runs-on: ubuntu-latest
+    needs: job-one                  # The "needs" keyword is used to specify that this job may only run after another is done.
+    steps:
+      - name: sendoff
+        run: echo "So you've decided to leave huh? It's alright. You'll be back :)"
