--- a/.github/workflows/Node CI.yml
+++ b/.github/workflows/Node CI.yml
@@ -7,6 +7,13 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    
     steps:
       - name: checkout repo
         uses: actions/checkout@v4
+        
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        
+      - name: Install dependencies
+        run: npm ci
